// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`演算 乗算 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"Assignment\\": [
      {
        \\"name\\": \\"Assignment\\",
        \\"children\\": {
          \\"ToRight\\": [
            {
              \\"name\\": \\"ToRight\\",
              \\"children\\": {
                \\"left\\": [
                  {
                    \\"name\\": \\"Pipe\\",
                    \\"children\\": {
                      \\"RelationExpression\\": [
                        {
                          \\"name\\": \\"RelationExpression\\",
                          \\"children\\": {
                            \\"Expression\\": [
                              {
                                \\"name\\": \\"Expression\\",
                                \\"children\\": {
                                  \\"Term\\": [
                                    {
                                      \\"name\\": \\"Term\\",
                                      \\"children\\": {
                                        \\"Factor\\": [
                                          {
                                            \\"name\\": \\"Factor\\",
                                            \\"children\\": {
                                              \\"NumberLiteral\\": [
                                                {
                                                  \\"image\\": \\"1\\",
                                                  \\"startOffset\\": 5,
                                                  \\"endOffset\\": 5,
                                                  \\"startLine\\": 2,
                                                  \\"endLine\\": 2,
                                                  \\"startColumn\\": 5,
                                                  \\"endColumn\\": 5,
                                                  \\"tokenTypeIdx\\": 4,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"NumberLiteral\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 4,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          },
                                          {
                                            \\"name\\": \\"Factor\\",
                                            \\"children\\": {
                                              \\"NumberLiteral\\": [
                                                {
                                                  \\"image\\": \\"1\\",
                                                  \\"startOffset\\": 9,
                                                  \\"endOffset\\": 9,
                                                  \\"startLine\\": 2,
                                                  \\"endLine\\": 2,
                                                  \\"startColumn\\": 9,
                                                  \\"endColumn\\": 9,
                                                  \\"tokenTypeIdx\\": 4,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"NumberLiteral\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 4,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ],
                                        \\"MultiplicationOperator\\": [
                                          {
                                            \\"image\\": \\"*\\",
                                            \\"startOffset\\": 7,
                                            \\"endOffset\\": 7,
                                            \\"startLine\\": 2,
                                            \\"endLine\\": 2,
                                            \\"startColumn\\": 7,
                                            \\"endColumn\\": 7,
                                            \\"tokenTypeIdx\\": 19,
                                            \\"tokenType\\": {
                                              \\"name\\": \\"Multi\\",
                                              \\"PATTERN\\": {},
                                              \\"CATEGORIES\\": [
                                                {
                                                  \\"name\\": \\"MultiplicationOperator\\",
                                                  \\"PATTERN\\": {},
                                                  \\"tokenTypeIdx\\": 18,
                                                  \\"CATEGORIES\\": [],
                                                  \\"categoryMatches\\": [
                                                    19,
                                                    20
                                                  ],
                                                  \\"categoryMatchesMap\\": {
                                                    \\"19\\": true,
                                                    \\"20\\": true
                                                  },
                                                  \\"isParent\\": true
                                                }
                                              ],
                                              \\"tokenTypeIdx\\": 19,
                                              \\"categoryMatches\\": [],
                                              \\"categoryMatchesMap\\": {},
                                              \\"isParent\\": false
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}"
`;

exports[`演算 加算 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"Assignment\\": [
      {
        \\"name\\": \\"Assignment\\",
        \\"children\\": {
          \\"ToRight\\": [
            {
              \\"name\\": \\"ToRight\\",
              \\"children\\": {
                \\"left\\": [
                  {
                    \\"name\\": \\"Pipe\\",
                    \\"children\\": {
                      \\"RelationExpression\\": [
                        {
                          \\"name\\": \\"RelationExpression\\",
                          \\"children\\": {
                            \\"Expression\\": [
                              {
                                \\"name\\": \\"Expression\\",
                                \\"children\\": {
                                  \\"Term\\": [
                                    {
                                      \\"name\\": \\"Term\\",
                                      \\"children\\": {
                                        \\"Factor\\": [
                                          {
                                            \\"name\\": \\"Factor\\",
                                            \\"children\\": {
                                              \\"NumberLiteral\\": [
                                                {
                                                  \\"image\\": \\"1\\",
                                                  \\"startOffset\\": 5,
                                                  \\"endOffset\\": 5,
                                                  \\"startLine\\": 2,
                                                  \\"endLine\\": 2,
                                                  \\"startColumn\\": 5,
                                                  \\"endColumn\\": 5,
                                                  \\"tokenTypeIdx\\": 4,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"NumberLiteral\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 4,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    },
                                    {
                                      \\"name\\": \\"Term\\",
                                      \\"children\\": {
                                        \\"Factor\\": [
                                          {
                                            \\"name\\": \\"Factor\\",
                                            \\"children\\": {
                                              \\"NumberLiteral\\": [
                                                {
                                                  \\"image\\": \\"1\\",
                                                  \\"startOffset\\": 9,
                                                  \\"endOffset\\": 9,
                                                  \\"startLine\\": 2,
                                                  \\"endLine\\": 2,
                                                  \\"startColumn\\": 9,
                                                  \\"endColumn\\": 9,
                                                  \\"tokenTypeIdx\\": 4,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"NumberLiteral\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 4,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ],
                                  \\"AdditionOperator\\": [
                                    {
                                      \\"image\\": \\"+\\",
                                      \\"startOffset\\": 7,
                                      \\"endOffset\\": 7,
                                      \\"startLine\\": 2,
                                      \\"endLine\\": 2,
                                      \\"startColumn\\": 7,
                                      \\"endColumn\\": 7,
                                      \\"tokenTypeIdx\\": 16,
                                      \\"tokenType\\": {
                                        \\"name\\": \\"Plus\\",
                                        \\"PATTERN\\": {},
                                        \\"CATEGORIES\\": [
                                          {
                                            \\"name\\": \\"AdditionOperator\\",
                                            \\"PATTERN\\": {},
                                            \\"tokenTypeIdx\\": 15,
                                            \\"CATEGORIES\\": [],
                                            \\"categoryMatches\\": [
                                              16,
                                              17
                                            ],
                                            \\"categoryMatchesMap\\": {
                                              \\"16\\": true,
                                              \\"17\\": true
                                            },
                                            \\"isParent\\": true
                                          }
                                        ],
                                        \\"tokenTypeIdx\\": 16,
                                        \\"categoryMatches\\": [],
                                        \\"categoryMatchesMap\\": {},
                                        \\"isParent\\": false
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}"
`;

exports[`演算 減算 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"Assignment\\": [
      {
        \\"name\\": \\"Assignment\\",
        \\"children\\": {
          \\"ToRight\\": [
            {
              \\"name\\": \\"ToRight\\",
              \\"children\\": {
                \\"left\\": [
                  {
                    \\"name\\": \\"Pipe\\",
                    \\"children\\": {
                      \\"RelationExpression\\": [
                        {
                          \\"name\\": \\"RelationExpression\\",
                          \\"children\\": {
                            \\"Expression\\": [
                              {
                                \\"name\\": \\"Expression\\",
                                \\"children\\": {
                                  \\"Term\\": [
                                    {
                                      \\"name\\": \\"Term\\",
                                      \\"children\\": {
                                        \\"Factor\\": [
                                          {
                                            \\"name\\": \\"Factor\\",
                                            \\"children\\": {
                                              \\"NumberLiteral\\": [
                                                {
                                                  \\"image\\": \\"1\\",
                                                  \\"startOffset\\": 5,
                                                  \\"endOffset\\": 5,
                                                  \\"startLine\\": 2,
                                                  \\"endLine\\": 2,
                                                  \\"startColumn\\": 5,
                                                  \\"endColumn\\": 5,
                                                  \\"tokenTypeIdx\\": 4,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"NumberLiteral\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 4,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    },
                                    {
                                      \\"name\\": \\"Term\\",
                                      \\"children\\": {
                                        \\"Factor\\": [
                                          {
                                            \\"name\\": \\"Factor\\",
                                            \\"children\\": {
                                              \\"NumberLiteral\\": [
                                                {
                                                  \\"image\\": \\"1\\",
                                                  \\"startOffset\\": 9,
                                                  \\"endOffset\\": 9,
                                                  \\"startLine\\": 2,
                                                  \\"endLine\\": 2,
                                                  \\"startColumn\\": 9,
                                                  \\"endColumn\\": 9,
                                                  \\"tokenTypeIdx\\": 4,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"NumberLiteral\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 4,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ],
                                  \\"AdditionOperator\\": [
                                    {
                                      \\"image\\": \\"-\\",
                                      \\"startOffset\\": 7,
                                      \\"endOffset\\": 7,
                                      \\"startLine\\": 2,
                                      \\"endLine\\": 2,
                                      \\"startColumn\\": 7,
                                      \\"endColumn\\": 7,
                                      \\"tokenTypeIdx\\": 17,
                                      \\"tokenType\\": {
                                        \\"name\\": \\"Minus\\",
                                        \\"PATTERN\\": {},
                                        \\"CATEGORIES\\": [
                                          {
                                            \\"name\\": \\"AdditionOperator\\",
                                            \\"PATTERN\\": {},
                                            \\"tokenTypeIdx\\": 15,
                                            \\"CATEGORIES\\": [],
                                            \\"categoryMatches\\": [
                                              16,
                                              17
                                            ],
                                            \\"categoryMatchesMap\\": {
                                              \\"16\\": true,
                                              \\"17\\": true
                                            },
                                            \\"isParent\\": true
                                          }
                                        ],
                                        \\"tokenTypeIdx\\": 17,
                                        \\"categoryMatches\\": [],
                                        \\"categoryMatchesMap\\": {},
                                        \\"isParent\\": false
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}"
`;

exports[`演算 除算 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"Assignment\\": [
      {
        \\"name\\": \\"Assignment\\",
        \\"children\\": {
          \\"ToRight\\": [
            {
              \\"name\\": \\"ToRight\\",
              \\"children\\": {
                \\"left\\": [
                  {
                    \\"name\\": \\"Pipe\\",
                    \\"children\\": {
                      \\"RelationExpression\\": [
                        {
                          \\"name\\": \\"RelationExpression\\",
                          \\"children\\": {
                            \\"Expression\\": [
                              {
                                \\"name\\": \\"Expression\\",
                                \\"children\\": {
                                  \\"Term\\": [
                                    {
                                      \\"name\\": \\"Term\\",
                                      \\"children\\": {
                                        \\"Factor\\": [
                                          {
                                            \\"name\\": \\"Factor\\",
                                            \\"children\\": {
                                              \\"NumberLiteral\\": [
                                                {
                                                  \\"image\\": \\"1\\",
                                                  \\"startOffset\\": 5,
                                                  \\"endOffset\\": 5,
                                                  \\"startLine\\": 2,
                                                  \\"endLine\\": 2,
                                                  \\"startColumn\\": 5,
                                                  \\"endColumn\\": 5,
                                                  \\"tokenTypeIdx\\": 4,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"NumberLiteral\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 4,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          },
                                          {
                                            \\"name\\": \\"Factor\\",
                                            \\"children\\": {
                                              \\"NumberLiteral\\": [
                                                {
                                                  \\"image\\": \\"1\\",
                                                  \\"startOffset\\": 9,
                                                  \\"endOffset\\": 9,
                                                  \\"startLine\\": 2,
                                                  \\"endLine\\": 2,
                                                  \\"startColumn\\": 9,
                                                  \\"endColumn\\": 9,
                                                  \\"tokenTypeIdx\\": 4,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"NumberLiteral\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 4,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ],
                                        \\"MultiplicationOperator\\": [
                                          {
                                            \\"image\\": \\"/\\",
                                            \\"startOffset\\": 7,
                                            \\"endOffset\\": 7,
                                            \\"startLine\\": 2,
                                            \\"endLine\\": 2,
                                            \\"startColumn\\": 7,
                                            \\"endColumn\\": 7,
                                            \\"tokenTypeIdx\\": 20,
                                            \\"tokenType\\": {
                                              \\"name\\": \\"Div\\",
                                              \\"PATTERN\\": {},
                                              \\"CATEGORIES\\": [
                                                {
                                                  \\"name\\": \\"MultiplicationOperator\\",
                                                  \\"PATTERN\\": {},
                                                  \\"tokenTypeIdx\\": 18,
                                                  \\"CATEGORIES\\": [],
                                                  \\"categoryMatches\\": [
                                                    19,
                                                    20
                                                  ],
                                                  \\"categoryMatchesMap\\": {
                                                    \\"19\\": true,
                                                    \\"20\\": true
                                                  },
                                                  \\"isParent\\": true
                                                }
                                              ],
                                              \\"tokenTypeIdx\\": 20,
                                              \\"categoryMatches\\": [],
                                              \\"categoryMatchesMap\\": {},
                                              \\"isParent\\": false
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}"
`;
